Finished all textures, models and definitions

--- a/src/main/resources/assets/studentsdelight/lang/en_us.json
+++ b/src/main/resources/assets/studentsdelight/lang/en_us.json
@@ -1,3 +1,14 @@
 {
+  "item.studentsdelight.bolognese_sauce": "Bolognese sauce",
+  "item.studentsdelight.kaktis_tortilla": "Kakti's tortilla",
+  "item.studentsdelight.low_calorie_almost_pizza": "Low-calorie (almost) pizza",
+  "item.studentsdelight.low_calorie_almost_pizza_slice": "Low-calorie (almost) pizza slice",
+  "item.studentsdelight.overbaked_potato": "Overbaked potato",
+  "item.studentsdelight.pasta_with_bolognese_sauce": "Spaghetti bolognese",
+  "item.studentsdelight.premium_sandwich": "Premium sandwich",
+  "item.studentsdelight.salt_soup": "Salt soup",
+  "item.studentsdelight.shakshuka": "Yogurt bottle",
+  "item.studentsdelight.spaghetti_sandwich": "Spaghetti sandwich",
+  "item.studentsdelight.watsugs_tortilla": "Watsug's tortilla",
   "item.studentsdelight.yogurt_bottle": "Yogurt bottle"
 }
